updated some files and fixed bugs

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -17,6 +17,9 @@
             <div class="d-card-footer p-3 text-center">
               <div class="stats">
                 <h3 class="card-title fs-18 font-weight-bold"><%= todayOrderData[0]?.todayAmount?todayOrderData[0]?.todayAmount:0 %></h3>
+                <% console.log(todayOrderData[0]?.todayAmount ) %>
+                <% console.log(last7daysAmount[0]?.todayAmount) %>
+                <% console.log(last30daysAmount[0]?.todayAmount) %>
               </div>
             </div>
           </div>
