--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -446,7 +446,7 @@
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/category/list" class="dash-link">
                   <span class="dash-micon"
-                    ><i class="fa-solid fa-box"></i
+                    ><i class="fa-solid fa-circle-user"></i
                   ></span>
                   <span class="dash-mtext text-w">Trainer Category</span>
                 </a>
@@ -454,7 +454,7 @@
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/trainer/list" class="dash-link">
                   <span class="dash-micon"
-                    ><i class="fa-solid fa-box"></i
+                    ><i class="fa-solid fa-person"></i
                   ></span>
                   <span class="dash-mtext text-w">Trainers</span>
                 </a>
@@ -487,7 +487,7 @@
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/notification/list" class="dash-link"
                   ><span class="dash-micon"
-                    ><i class="fa-solid fa-users"></i> </span
+                    ><i class="fa-solid fa-bell"></i> </span
                   ><span class="dash-mtext">Notifications</span></a
                 >
               </li>
@@ -572,7 +572,7 @@
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/blog/list" class="dash-link">
                   <span class="dash-micon"
-                    ><i class="fa-solid fa-receipt"></i
+                    ><i class="fa-solid fa-blog"></i
                   ></span>
                   <span class="dash-mtext text-w">Blogs</span>
                 </a>
@@ -598,14 +598,14 @@
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/web_userContactInfo/list" class="dash-link"
                   ><span class="dash-micon"
-                    ><i class="fa-solid fa-users"></i> </span
+                    ><i class="fa-solid fa-users-rays"></i> </span
                   ><span class="dash-mtext">Web Users Contact</span></a
                 >
               </li>
               <li class="dash-item dash-hasmenu">
                 <a href="/admin/milestones/list" class="dash-link"
                   ><span class="dash-micon"
-                    ><i class="fa-solid"></i> </span
+                    ><i class="fa-solid fa-m"></i> </span
                   ><span class="dash-mtext">Milestones</span></a
                 >
               </li>
