--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -205,7 +205,7 @@
                           <td width="10%"><%= user?.name%></td>
                           <td width="10%"><%= user?.contactNumber %></td>
                           <td width="10%"><%= user?.stateOfResidence %></td>
-                          <td width="10%"><%= user?.created_at %></td>
+                          <td width="10%"><%= convertTimeStampToDate(user?.created_at) %></td>
                         </tr>
                         <% }); %> <% } %>
                       </tbody>
@@ -470,5 +470,24 @@
     </div>
   </section>
 </div>
+
+<%
+function convertTimeStampToDate(date){
+   date = Number(date)
+      var d = new Date(date),
+         month = '' + (d.getMonth() + 1),
+         day = '' + d.getDate(),
+         year = d.getFullYear();
+
+   if (month.length < 2)
+   month = '0' + month;
+   if (day.length < 2)
+   day = '0' + day;
+   var date = new Date();
+   date.toLocaleDateString();
+
+   return [day, month, year].join('-');
+}
+%>
 
 <%- include('partials/footer.ejs') %>
