--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -668,9 +668,9 @@
                     <li class="dropdown-item">
                       <a href="/admin/user_say/list">User Say</a>
                     </li> -->
-                    <li class="dropdown-item">
+                    <!-- <li class="dropdown-item">
                       <a href="/admin/transformations/list">Transformations</a>
-                    </li>
+                    </li> -->
                     <li class="dropdown-item">
                       <a href="/admin/setting_footer/list">Footer</a>
                     </li>
